--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="carousel-inner" role="listbox">
 
-                <div class="carousel-item active" style="background-image: url('https://gitee.com/klxh/klxh/raw/master/io-images/banners/4.png');">
+                <div class="carousel-item active" style="background-image: url('images/banner/4.png');">
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2>原生App开发</h2>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item" style="background-image: url('https://gitee.com/klxh/klxh/raw/master/io-images/banners/2.png');">
+                <div class="carousel-item" style="background-image: url('images/banner/2.png'); left top no-repeat;">
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2>定制网站建设</h2>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item" style="background-image: url('https://gitee.com/klxh/klxh/raw/master/io-images/banners/3.png');">
+                <div class="carousel-item" style="background-image: url('images/banner/3.png');">
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2>新网站建设服务</h2>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item" style="background-image: url('https://gitee.com/klxh/klxh/raw/master/io-images/banners/1.png');">
+                <div class="carousel-item" style="background-image: url('images/banner/1.png');">
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2>小程序 微信开发</h2>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item" style="background-image: url('https://gitee.com/klxh/klxh/raw/master/io-images/banners/5.png');">
+                <div class="carousel-item" style="background-image: url('images/banner/5.png');">
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2>优质的团队</h2>
@@ -688,7 +688,7 @@
                     <div class="contact-phone">
                         <i class="ion-ios-telephone-outline"></i>
                         <h3>联系电话</h3>
-                        <p><a href="tel:+155895548855">+86 15968870932</a></p>
+                        <p><a href="tel:+155895548855">+86 17681827632</a></p>
                     </div>
                 </div>
 
@@ -771,7 +771,7 @@
                         浙江省杭州市<br>
                         滨江区滨盛路<br>
                         萧宏大厦<br>
-                        <strong>手机:</strong> +86 15968870932<br>
+                        <strong>手机:</strong> +86 17681827632<br>
                         <strong>邮箱:</strong> shenhuanet@126.com<br>
                     </p>
 
